Improve builig amd add uplaod graphic only without template

--- a/app/src/main/res/menu/dev_menu.xml
+++ b/app/src/main/res/menu/dev_menu.xml
@@ -64,4 +64,6 @@
     </item>
     <item android:id="@+id/default_none"
         android:title="Default"/>
+    <item android:id="@+id/graphic_only"
+        android:title="Upload Graphics"/>
 </menu>
