--- a/app/src/main/res/menu/dev_menu.xml
+++ b/app/src/main/res/menu/dev_menu.xml
@@ -62,6 +62,14 @@
                 android:title="VIN code" />
             <item android:id="@+id/gps"
                 android:title="GPS" />
+            <item android:id="@+id/temperature"
+                android:title="External Temperature" />
+            <item android:id="@+id/odometer"
+                android:title="Odometer" />
+            <item android:id="@+id/gear_status"
+                android:title="Gear Status" />
+            <item android:id="@+id/prndl"
+                android:title="PRNDL" />
         </menu>
     </item>
     <item android:id="@+id/nolayout"
@@ -79,10 +87,21 @@
                 android:title="Upload File"/>
             <item android:id="@+id/alert"
                 android:title="Alert"/>
+            <item android:id="@+id/alert_static"
+                android:title="Alert Static"/>
             <item android:id="@+id/scroll_message"
                 android:title="Scroll Message"/>
             <item android:id="@+id/scroll_message_ua"
                 android:title="Scroll Message_ua"/>
+            <item android:id="@+id/remote_files"
+                android:title="Remote Files"/>
+        </menu>
+    </item>
+    <item android:id="@+id/compatibilities"
+        android:title="Compatibilities">
+        <menu>
+            <item android:id="@+id/image_fields"
+                android:title="Get Image fields"/>
         </menu>
     </item>
 </menu>
