Add more vehicle paramaters

--- a/app/src/main/res/menu/dev_menu.xml
+++ b/app/src/main/res/menu/dev_menu.xml
@@ -76,6 +76,40 @@
                 android:title="PRNDL" />
             <item android:id="@+id/body"
                 android:title="Body info" />
+            <item android:id="@+id/CAR_INSTANT_FUEL_CONSUMPTION"
+                android:title="CAR_INSTANT_FUEL_CONSUMPTION"/>
+            <item android:id="@+id/CAR_FUEL_LEVEL_STATE"
+                android:title="CAR_FUEL_LEVEL_STATE"/>
+            <item android:id="@+id/CAR_BELT_STATUS"
+                android:title="CAR_BELT_STATUS"/>
+            <item android:id="@+id/CAR_DRIVER_BRAKING"
+                android:title="CAR_DRIVER_BRAKING"/>
+            <item android:id="@+id/CAR_WIPER_STATUS"
+                android:title="CAR_WIPER_STATUS"/>
+            <item android:id="@+id/CAR_HEAD_LAMP_STATUS"
+                android:title="CAR_HEAD_LAMP_STATUS"/>
+            <item android:id="@+id/CAR_ENGINE_TORQUE"
+                android:title="CAR_ENGINE_TORQUE"/>
+            <item android:id="@+id/CAR_ACC_PEDAL_POSITION"
+                android:title="CAR_ACC_PEDAL_POSITION"/>
+            <item android:id="@+id/CAR_STEERING_WHEEL_ANGLE"
+                android:title="CAR_STEERING_WHEEL_ANGLE"/>
+            <item android:id="@+id/CAR_AIRBAG_STATUS"
+                android:title="CAR_AIRBAG_STATUS"/>
+            <item android:id="@+id/CAR_CLUSTER_MODE_STATUS"
+                android:title="CAR_CLUSTER_MODE_STATUS"/>
+            <item android:id="@+id/CAR_MYKEY"
+                android:title="CAR_MYKEY"/>
+            <item android:id="@+id/CAR_TURN_SIGNAL"
+                android:title="CAR_TURN_SIGNAL"/>
+            <item android:id="@+id/CAR_ELECTRONIC_PARKBRAKE_STATUS"
+                android:title="CAR_ELECTRONIC_PARKBRAKE_STATUS"/>
+            <item android:id="@+id/CAR_KEY_RPM"
+                android:title="CAR_KEY_RPM"/>
+            <item android:id="@+id/CAR_KEY_SPEED"
+                android:title="CAR_KEY_SPEED"/>
+            <item android:id="@+id/CAR_DEVICE_STATUS"
+                android:title="CAR_DEVICE_STATUS"/>
         </menu>
     </item>
     <item android:id="@+id/nolayout"
