--- a/app/src/main/res/menu/dev_menu.xml
+++ b/app/src/main/res/menu/dev_menu.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/clean_logs"
+        android:title="Clean Logs"/>
     <item android:id="@+id/default_none"
         android:title="Default"/>
     <item android:id="@+id/system_compat"
